# neural-pitch

./: .actrc  .editorconfig  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  eslint.config.js  index.html  models.toml  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  rustfmt.toml  tailwind.config.cjs  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crates/neural-pitch-core/: Cargo.toml  README.md
crates/neural-pitch-core/assets/: BASIC_PITCH_NOTICE.md
crates/neural-pitch-core/examples/: build_voice_fixtures.rs  verify_voice_roundtrip.rs
crates/neural-pitch-core/src/: error.rs  lib.rs  prelude.rs  settings.rs  smoothing.rs  voicing.rs
crates/neural-pitch-core/src/analysis/: contour.rs  mod.rs  range.rs  vibrato.rs  viterbi.rs
crates/neural-pitch-core/src/audio/: backend.rs  cpal_backend.rs  mock_backend.rs  mod.rs
crates/neural-pitch-core/src/models/: manifest.rs  mod.rs  resolver.rs
crates/neural-pitch-core/src/music/: mod.rs
crates/neural-pitch-core/src/pipeline/: mod.rs  recording.rs  sink.rs  target_match.rs  worker.rs
crates/neural-pitch-core/src/pitch/: auto_prior.rs  crepe.rs  factory.rs  mod.rs  pesto.rs  pyin.rs  yin.rs
crates/neural-pitch-core/src/poly/: basic_pitch.rs  midi.rs  mod.rs  synth.rs
crates/neural-pitch-core/src/stems/: download.rs  htdemucs.rs  mod.rs  resample.rs  segment.rs
crates/neural-pitch-core/src/store/: analysis.rs  analysis_runtime.rs  error.rs  library.rs  migrations.rs  mod.rs  model.rs
crates/neural-pitch-core/src/store/migrations/: V0001__init.sql  V0002__training.sql  V0003__stems.sql
crates/neural-pitch-core/src/test_utils/: mod.rs  onnx.rs  signals.rs  voice.rs
crates/neural-pitch-core/src/training/: chords.rs  drill.rs  intervals.rs  ipc.rs  mod.rs  scales.rs  solfege.rs  target_match.rs
crates/neural-pitch-core/tests/: acceptance_pyin_voice.rs  acceptance_voice.rs  analyze_recording_cache.rs  analyze_recording_cancellation.rs  analyze_recording_includes_range.rs  analyze_recording_includes_vibrato.rs  analyze_recording_progress.rs  audio_backend_fallback.rs  auto_prior_hint_overrides.rs  auto_prior_initial.rs  auto_prior_outlier.rs  auto_prior_vibrato.rs  auto_prior_voice.rs  basic_pitch_chord.rs  basic_pitch_resample.rs  basic_pitch_silence.rs  basic_pitch_smoke.rs  basic_pitch_window_overlap.rs  cache_version_0_1_to_0_2.rs  chords_classify.rs  crepe_tiny_synthetic_onnx.rs  drill_result_aggregate.rs  dsp_pipeline_440hz.rs  dsp_pipeline_auto_prior.rs  dsp_pipeline_cancellation.rs  dsp_pipeline_silence.rs  dsp_pipeline_sink_disconnect.rs  dsp_pipeline_vibrato.rs  flac_sink_disk_full_injected.rs  flac_sink_full_disk.rs  flac_sink_roundtrip.rs  get_range_report_projection.rs  get_vibrato_report_projection.rs  golden_note_table.rs  intervals_named.rs  midi_export_a4.rs  midi_pitch_bend_curve.rs  mock_backend_drops.rs  pesto_state_threading.rs  pesto_synthetic_onnx.rs  (+54 more)
crates/neural-pitch-core/tests/fixtures/voice/: 040_E2_synthvoice_clean.flac  045_A2_synthvoice_clean.flac  048_C3_synthvoice_clean.flac  055_G3_synthvoice_clean.flac  057_A3_synthvoice_clean.flac  060_C4_synthvoice_clean.flac  062_D4_synthvoice_clean.flac  064_E4_synthvoice_vibrato5hz_50c.flac  065_F4_synthvoice_clean.flac  069_A4_synthvoice_clean.flac  072_C5_synthvoice_clean.flac  077_F5_synthvoice_vibrato5hz_50c.flac  081_A5_synthvoice_vibrato5hz_50c.flac  MANIFEST.toml  README.md
docs/adr/: 0001-license-and-foss-posture.md  0002-mobile-ready-repo-and-crate-shape-day-1.md  0003-frontend-stack-react-vite-ts-zustand-tailwind-shadcn.md  0004-default-note-name-system-english-with-formatter-trait.md  0005-a4-reference-configurable-default-440.md  0006-visual-only-feedback-phase-1.md  0007-pitch-estimator-trait-and-auto-prior.md  0008-phase-1-yin-mpm-only-neural-phase-2.md  0009-phase-ordering-ear-training-before-stem-separation.md  0010-audio-formats-wav-flac-mp3-day-1.md  0011-recording-defaults-48k-24bit-mono-flac.md  0012-recordings-library-and-analysis-cache-sqlite.md  0013-settings-via-tauri-plugin-store.md  0014-concurrency-tokio-stdthread-rtrb.md  0015-error-handling-thiserror-anyhow-no-panics.md  0016-test-pyramid-tier-1-day-1.md  0017-observability-tracing-tauri-plugin-log-no-telemetry.md  0018-triple-layer-enforcement-convention-pre-commit-ci.md  0019-tier-5-e2e-playwright-mcp.md  0020-neural-feature-gate.md  0021-range-vibrato-cache-version.md  0022-local-ci-harness.md  README.md
docs/design/: DESIGN.md  PHASE-1-CLOSEOUT.md  TEST-PLAN.md
docs/licenses/: REGISTER.md
docs/research/: MODULAR-PITCH-RESEARCH.md  REPO-CONVENTIONS-REPORT.md  RESEARCH-REPORT.md
scripts/: check-all.sh  check-commit-msg.sh  ci-local.sh  install-hooks.sh  run-acceptance.sh  smoke-driver.mjs  smoke-test.sh  update-visual-baselines.sh
scripts/lib/: playwright.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  commands_drill.rs  lib.rs  main.rs  sink.rs  state.rs  stems.rs  transcribe.rs
src-tauri/tests/: analyze_recording.rs  capabilities.rs  drill_history_persists.rs  export_midi_roundtrip.rs  export_stem_roundtrip.rs  get_recording_path.rs  import_audio_file.rs  match_channel_emits.rs  read_stem_audio.rs  separate_stems_cancellation.rs  separate_stems_persists.rs  separate_stems_real_htdemucs.rs  transcribe_recording_cache.rs  transcribe_recording_polyphonic.rs
src/components/: CentsMeter.tsx  DeviceDisconnectToast.tsx  DeviceErrorNotice.tsx  HistoryStrip.tsx  NoteDisplay.tsx  PermissionNotice.tsx  SettingsDrawer.tsx  StatusPill.tsx  Tuner.tsx
src/hooks/: useAnalysisProgress.ts  useDeviceEvents.ts  useDrillMatchStream.ts  usePitchStream.ts  useSettings.ts  (+3 more)
(+99 files in other folders)
