[workspace]
resolver = "3"
members  = ["crates/neural-pitch-core", "src-tauri"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
authors      = ["Derek Kinzo <derekkinzo@gmail.com>"]
repository   = "https://github.com/derekkinzo/neural-pitch"
homepage     = "https://github.com/derekkinzo/neural-pitch"
readme       = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic     = { level = "warn", priority = -1 }
unwrap_used  = "deny"
expect_used  = "deny"
panic        = "deny"
todo         = "warn"

# Pedantic lints that are noise in DSP / audio code where small-integer-to-f32
# casts and constructor return values are routine. Keep `unwrap_used`,
# `expect_used`, `panic`, and `unsafe_code` strict; relax these informational
# lints crate-wide. Re-enable on a per-call-site basis with `#[deny(...)]` if
# precision loss ever matters.
cast_precision_loss      = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_lossless            = "allow"
must_use_candidate       = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
unreadable_literal       = "allow"
module_name_repetitions  = "allow"
# Brand names (`NeuralPitch`, `PitchEstimator`, etc.) trigger this constantly;
# enforcing it would require backticking every product/type name in every
# doc comment. Not worth the friction.
doc_markdown             = "allow"

[workspace.dependencies]
thiserror    = "2"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

[profile.dev]
opt-level = 1     # faster test runs while keeping debug info
