[package]
name        = "neural-pitch"
description = "NeuralPitch — pitch-detection app for singers and musicians."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true
default-run = "neural-pitch"

[lib]
name       = "neural_pitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log   = "2"
tauri-plugin-store = "2"
neural-pitch-core = { path = "../crates/neural-pitch-core", version = "0.1" }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
parking_lot    = { workspace = true }
cpal           = "0.17"
rtrb           = "0.3"
tokio          = { version = "1", features = ["rt", "time", "macros"] }
tokio-util     = { version = "0.7", default-features = false }

[features]
default        = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true
