[package]
name        = "neural-pitch"
description = "NeuralPitch — pitch-detection app for musicians."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true
default-run = "neural-pitch"

[lib]
name       = "neural_pitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log   = "2"
tauri-plugin-store = "2"
# Phase 3 — dialog plugin powers the front-end's open / save pickers for
# `import_audio_file` / `export_midi`. The Rust shell never touches the
# returned path through a broad `fs:` plugin scope; the path is passed by
# value into the typed commands, which then perform IO under their own
# scoped helpers (see `transcribe.rs` `import_audio_file_blocking` and
# `export_midi_blocking`).
tauri-plugin-dialog = "2"
neural-pitch-core = { path = "../crates/neural-pitch-core", version = "0.1" }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
parking_lot    = { workspace = true }
# Postcard is the on-the-wire serialiser for the `analysis_cache.result_blob`
# column. The Phase 3 transcribe path stores a `WirePolyResult` blob keyed on
# `("basic-pitch", "1.0")` so the cache-hit path can re-summarise without
# re-running ONNX inference. Gated behind the `neural` feature because the
# transcribe surface is only compiled in under that feature.
postcard       = { workspace = true, optional = true }
# Phase 3 export-MIDI emitter writes SMF type-1 bytes via midly. Pulled into
# the regular dep set (rather than dev-only) because the export path is the
# production code that flushes the SMF to disk. Gated behind `neural` so the
# `--no-default-features` build does not pick up the dependency. ~50 KB
# pure-Rust, MIT/Apache-2.0.
midly          = { version = "0.5", default-features = false, features = ["std"], optional = true }
# Pure-Rust FLAC decoder used by the stem-separator import path. The
# live recording pipeline writes FLAC, so the separator must be able to
# decode FLAC sources. Pulled in only under `feature = "neural"` because
# the only consumer lives in `crate::stems::decode_mono_48k`.
claxon         = { version = "0.4", optional = true }
cpal           = "0.17"
rtrb           = "0.3"
tokio          = { version = "1", features = ["rt", "time", "macros"] }
tokio-util     = { version = "0.7", default-features = false }

[features]
default        = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Pass-through that flips on the `neural` feature of `neural-pitch-core`
# (PESTO + CREPE-tiny + Viterbi). Off by default so the standard
# `cargo tauri build` produces a binary with no `ort` / `ndarray`
# dependency. Opt in with `cargo tauri build --features app-neural`.
app-neural     = ["neural-pitch-core/neural"]
# Phase 3 — file-import / transcribe / MIDI-export surface. Pass-through
# to `neural-pitch-core/neural` (Basic Pitch + MIDI emitter live in
# `neural_pitch_core::poly`, which is itself gated behind `neural`). The
# Phase 3 integration tests under `tests/import_audio_file.rs`,
# `tests/transcribe_recording_cache.rs`, and `tests/export_midi_roundtrip.rs`
# all start with `#![cfg(feature = "neural")]` so they compile out under
# `--no-default-features` and the `cargo build --no-default-features`
# build stays clean. `postcard` and `midly` ride on the same gate because
# they only appear in the transcribe / export code paths.
neural         = ["neural-pitch-core/neural", "dep:postcard", "dep:midly", "dep:claxon"]

[dev-dependencies]
# Integration tests for the analysis Tauri surface. Drives the public
# `*_blocking` helpers directly (the Tauri command layer is a thin async
# wrapper) so the test harness does not need to spin up a full Tauri
# runtime.
neural-pitch-core = { path = "../crates/neural-pitch-core", version = "0.1" }
# postcard is the wire format used by the analysis_cache table; the
# integration test seeds a `ContourResult` blob directly.
postcard          = { workspace = true }
# Phase 3 export-MIDI round-trip test re-parses the SMF byte stream the
# Tauri command writes to disk. Pure-Rust, MIT/Apache-2.0; gated to
# dev-dependencies because production code never reads MIDI back.
midly             = "0.5"

[lints]
workspace = true
