[package]
name        = "neural-pitch-core"
description = "Pitch detection, audio I/O, music theory, recordings library, and DSP pipeline for NeuralPitch."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true

[features]
default = ["cpal", "flac", "pyin"]
cpal              = ["dep:cpal"]
# ORT 2.0 (load-dynamic) + rubato + reqwest. The ONNX Runtime
# shared library is supplied out of band via `ORT_DYLIB_PATH`; we
# deliberately avoid the `download-binaries` feature. `rubato` is the
# resampler used by `poly::basic_pitch` to coerce arbitrary capture rates
# into Basic Pitch's native 22.05 kHz before windowing, and reused by
# `stems::resample` for the 44.1 kHz HTDemucs round-trip. `reqwest`
# (rustls-only, no OpenSSL) drives the on-demand HTDemucs ONNX download
# in `stems::download` — the model is too large (~80 MB) to commit.
neural            = ["dep:ort", "dep:rubato", "dep:reqwest"]
# pYIN offline backend (Sytronik/pyin = "1.2"). Pulls in the pure-Rust
# pyin crate plus claxon for the FLAC decode path used by
# `analysis::contour::analyze_contour`.
pyin              = ["dep:pyin", "dep:claxon"]
# Pure-Rust FLAC encoder for the recording pipeline.
flac              = ["dep:flacenc"]
# Exposes MockRecordingSink to downstream test crates.
test-utils        = []

[dependencies]
thiserror   = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
rtrb        = "0.3"
tokio-util  = { version = "0.7", default-features = false }
cpal        = { version = "0.17", optional = true }
# Gated behind the `flac` feature, so production binaries that disable
# recording (e.g. minimal CI builds) do not pull in the encoder.
flacenc     = { version = "0.5", default-features = false, optional = true }
# Persistence layer (`store::RecordingsLibrary`). `bundled` ships a
# vendored SQLite so consumers do not need a system libsqlite3. Migrations are
# managed by `refinery` (file-based, append-only). UUIDv7 row keys come from
# the `uuid` crate. `directories` resolves the per-platform user-data dir for
# production paths (tests use `:memory:` and never touch the FS).
rusqlite    = { version = "0.31", features = ["bundled"] }
refinery    = { version = "0.8", features = ["rusqlite"] }
uuid        = { version = "1", features = ["v7"] }
directories = "5"
# `parking_lot::Mutex` (non-poisoning) is used by
# `store::RecordingsLibrary` so the connection guard cannot be poisoned by a
# panic in another thread. Also surfaces consistently with `src-tauri/`'s
# pattern.
parking_lot = { workspace = true }
# `postcard` is the on-the-wire serialiser for the
# `analysis_cache.result_blob` column. Pure-Rust, ~5-10x smaller than
# `serde_json` for the dense `Vec<F0Frame>` payload.
postcard    = { workspace = true }
# Sytronik/pyin v1.2.0. Pure-Rust pYIN (Mauch & Dixon 2014) implementation
# matching librosa 0.9.1. MIT licensed. Gated behind `feature = "pyin"`.
# The crate is offline-only (global Viterbi); the live DspWorker never
# touches it.
pyin        = { version = "1.2", optional = true }
# Pure-Rust FLAC decoder used by the `analyze_contour` FLAC path. Promoted
# from `dev-dependencies` to an optional dep behind `feature = "pyin"` so
# `analysis::contour` can decode recordings stored by the flac sink. Still
# available to dev tests via the dev-dep alias below.
claxon      = { version = "0.4", optional = true }
# ORT 2.0 rc.12. `load-dynamic` only: the shared library is supplied via
# `ORT_DYLIB_PATH` at runtime; no binary download.
# `api-18` is required because `ort`'s `ep/vitis.rs` references the
# `SessionOptionsAppendExecutionProvider_VitisAI` symbol whenever
# `load-dynamic` is on, but the symbol itself is `#[cfg(feature = "api-18")]`-
# gated in `ort-sys`. This is an upstream rc.12 mismatch; we pick the lowest
# api version that satisfies the symbol so we don't drag in newer api
# surface unnecessarily.
ort         = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "api-18"], optional = true }
# `toml` parses the workspace `models.toml` manifest used by the model
# resolver. `parse` only — we never re-serialise the manifest from Rust.
# Always-on (the resolver itself is not feature-gated; its `NotConfigured`
# short-circuit is the safe default for builds without the `neural`
# feature, where neural-backed `make_estimator` arms are disabled but
# `get_model_status` may still report manifest state).
toml        = { version = "0.8", default-features = false, features = ["parse"] }
# `sha2` provides the streaming SHA-256 used by the model resolver to
# verify on-disk ONNX blobs against the manifest hash. Pure-Rust,
# MIT/Apache-2.0.
sha2        = "0.10"
# `realfft` powers the residual-FFT vibrato detector (`analysis::vibrato`).
# Pure-Rust, MIT/Apache-2.0; already pulled in transitively via the `pyin`
# crate (see workspace lockfile), promoted here to a first-class dep so
# the analysis module can build under `--no-default-features` (i.e.
# without the `pyin` feature).
realfft     = "3.5"
# `midly` is the SMF reader/writer used by `poly::midi` to emit
# MIDI exports. Pure-Rust, no system deps, ~50 KB compiled. Always-on
# because the export path is not feature-gated; the surrounding
# `poly` module is gated behind `feature = "neural"` at `lib.rs` so the
# `--no-default-features` build never invokes the export path even
# though the dependency is in the graph.
midly       = { version = "0.5", default-features = false, features = ["std"] }
# `rubato` is the asynchronous resampler used by
# `poly::basic_pitch::BasicPitchEstimator` to map arbitrary capture rates
# into Basic Pitch's native 22.05 kHz before windowing. Pure-Rust,
# MIT-licensed; gated behind `feature = "neural"` because the only
# consumer lives under `poly/`, which is itself feature-gated.
rubato      = { version = "0.16", optional = true }
# `reqwest` drives the on-demand HTDemucs ONNX download in
# `stems::download`. We use the blocking client (no async runtime in the
# core crate) and the rustls-tls backend to keep OpenSSL out of the
# dependency tree. MIT/Apache-2.0; gated behind `feature = "neural"`
# because the only consumer lives under `stems/`, which is itself
# feature-gated.
# `rustls-tls-native-roots` uses the platform trust store (Linux:
# /etc/ssl/certs, macOS: Keychain, Windows: cert store) so the build
# does not pull in the `webpki-roots` crate (CDLA-Permissive-2.0, not
# in our deny.toml allowlist).
reqwest     = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots"], optional = true }

[dev-dependencies]
proptest    = "1"
approx      = "0.5"
# Voice-fixture builder. Pure-Rust FLAC encoder; pulled in only as a
# dev-dependency so production binaries do not see it. `default-features =
# false` drops the `par`, `log`, and `serde` features we do not need for
# one-shot CLI usage in `examples/build_voice_fixtures`.
flacenc     = { version = "0.5", default-features = false }
# Pure-Rust FLAC decoder used by `acceptance_voice.rs` to round-trip the
# voice fixtures back into PCM at test time. The `pyin` feature also pulls
# claxon as an optional dep above; the dev-dep alias keeps it available
# to tests that do not set the feature flag.
claxon      = "0.4"
# Parses `tests/fixtures/voice/MANIFEST.toml` at test time so the voice
# acceptance harness can iterate every fixture with its expected MIDI
# binding.
toml        = { version = "0.8", default-features = false, features = ["parse"] }

# Cancellation, sample-pacing, and DSP-worker tests need the integration tests
# to compile against the same default feature set as the binary. No extra
# `required-features` are needed here — `MockAudioBackend` is always-on.

[[example]]
name = "build_voice_fixtures"
path = "examples/build_voice_fixtures.rs"

[[example]]
name = "verify_voice_roundtrip"
path = "examples/verify_voice_roundtrip.rs"


[lints]
workspace = true
